# ps3tweaks

./: .flake8  .gitignore  .pre-commit-config.yaml  CLEANUP.md  Makefile  README.md  STRUCTURE.md  pyproject.toml
.github/: copilot-instructions.md
config/: ps3_emulator_config.example.json
docs/: QUICKSTART.md  README.md  UV_SETUP.md
scripts/: install.sh  utilities.sh  webman_integration.sh
src/ps3tweaks/: __init__.py  cli.py  config.py  manager.py  utils.py
tests/: test_cli.py  test_config.py  test_manager.py  test_ps3_connection.py  test_utils.py
tools/: dev_env.sh  download_covers.py
