[project]
name = "ps3tweaks"
version = "1.0.0"
description = "PS3 Emulator Auto-Config Homebrew"
readme = "docs/README.md"
requires-python = ">=3.8"
authors = [{name = "Renato Pereira"}]
license = {text = "MIT"}
keywords = ["ps3", "emulator"]

dependencies = [
	"paramiko>=3.0.0",
	"requests>=2.28.0",
	"pillow>=9.0.0",
]

[project.optional-dependencies]
dev = [
	"black>=24.0.0",
	"flake8>=7.0.0",
	"isort>=5.13.0",
	"pytest>=8.0.0",
	"pytest-cov>=5.0.0",
	"ruff>=0.6.0",
]

[project.scripts]
ps3-config = "ps3tweaks.cli:main"

[tool.setuptools]
packages = ["ps3tweaks"]
package-dir = {"" = "src"}

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
addopts = "--cov=src/ps3tweaks --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
